from sqlalchemy import Column, Integer, String, DateTime, Boolean, Numeric, ForeignKey
from sqlalchemy.orm import relationship
from sqlalchemy.sql import func

from utils.db import Base


class Bill(Base):
    __tablename__ = "bills"

    id = Column(Integer, primary_key=True, index=True)
    client_id = Column(Integer, ForeignKey("clients.id"), nullable=False)
    bill_number = Column(String(50), unique=True, nullable=False, index=True)
    total_amount = Column(Numeric(15, 2), nullable=False, default=0.00)
    total_paid = Column(Numeric(15, 2), nullable=False, default=0.00)
    total_remaining = Column(Numeric(15, 2), nullable=False, default=0.00)
    status = Column(String(20), nullable=False,
                    default="not paid")  # "paid" or "not paid"
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())
    notification_sent = Column(Boolean, default=False)
    delivery_status = Column(String(20), nullable=True,
                             # "delivered" or "on_the_way" or "not_delivered"
                             default="not_delivered")

    # Relationships

    # many to one " bill to client " belongs to
    client = relationship("Client", back_populates="bills")
    bill_items = relationship(
        "BillItem", back_populates="bill")  # one to many "bill to billintem" contains
    payments = relationship(
        # one to many "bill to payment " paid by
        "Payment", back_populates="bill", cascade="all, delete-orphan")

    # one to many " bill to notification " generates
    notifications = relationship("Notification", back_populates="bill")

    def __repr__(self):
        return f"<Bill(id={self.id}, bill_number='{self.bill_number}', status='{self.status}')>"
