from sqlalchemy import Column, Integer, String, DateTime, Boolean
from sqlalchemy.orm import relationship
from sqlalchemy.sql import func

from utils.db import Base


class Client(Base):
    __tablename__ = "clients"

    id = Column(Integer, primary_key=True, index=True)
    username = Column(String(50), unique=True, nullable=False, index=True)
    email = Column(String(100), unique=True, nullable=False, index=True)
    password_hash = Column(String(255), nullable=False)
    phone_number = Column(String(20), nullable=True)
    address = Column(String(255), nullable=True)
    city = Column(String(100), nullable=True)
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())
    is_active = Column(Boolean, default=True)

    password_access = Column(String(255), nullable=True)

    # Relationships
    bills = relationship("Bill", back_populates="client",
                         cascade="all, delete-orphan")  # one to many "client to bills " has
    # one to many "client to notification " receives
    notifications = relationship("Notification", back_populates="client")
    account = relationship(
        # one to one "client to account" include
        "ClientAccount", back_populates="client", uselist=False)

    def __repr__(self):
        return f"<Client(id={self.id}, username='{self.username}', email='{self.email}')>"
